Fix 'Contactanos' button + Carousel text align

--- a/src/components/Main/Slider/Slider.module.css
+++ b/src/components/Main/Slider/Slider.module.css
@@ -7,6 +7,7 @@
     background-color: rgba(0, 0, 0, 0.70);
     padding: 4px;
     color: white;
+    text-align: center;
 }
 
 .arrowRight {
